--- a/vignettes/faustTuning.Rmd
+++ b/vignettes/faustTuning.Rmd
@@ -363,10 +363,12 @@ gs <- flowWorkspace::GatingSet(fs)
 We beging by simulating a simple dataset consisting of 15 samples with three markers, which we generically call `V1`, `V2`, and `V3`.
 
 We invoke the function `generateAnnotationThresholds` on this data set with the following parameter-settings:
+
 - `gatingSet` is passed the GatingSet object loaded in memory.
 - `startingCellPop` is the node in the gating hierarchy to analyze. The setting "root" instructs `faust` to use all observations in each sample.
 - `projectPath` specifies the location to store the results of the `faust` analysis on disk.
 - `plottingDevice` instructs `faust` to generate intermediate diagnostic plots in the `png` format.
+- `threadNum` instructs `faust` to use 4 threads while growing the annotation forest.
 
 ```{r at01, message = FALSE, echo=TRUE, eval=FALSE}
 #
@@ -382,7 +384,8 @@ generateAnnotationThresholds(
     gatingSet           = gs,
     startingCellPop     = "root",
     projectPath         = projPath,
-    plottingDevice      = "png"
+    plottingDevice      = "png",
+    threadNum           = 4
 )
 ```
 ```{r at01a, message = FALSE, echo=FALSE, eval = TRUE, results='hide'}
@@ -396,14 +399,15 @@ invisible(generateAnnotationThresholds(
     gatingSet           = gs,
     startingCellPop     = "root",
     projectPath         = projPath,
-    plottingDevice      = "png"
+    plottingDevice      = "png",
+    threadNum           = 4
 ))
 ```
 
 Once complete, the `faustData` directory will have instantiated a sub-directory called `plotData`. By default, the `faust` function will generate several pdf images in this directory. Here, we investigate the file `scoreLines.png`, which shows thes distribution of depth scores by marker across experimental units in the dataset. 
 
 
-```{r slp01, echo = FALSE, message=FALSE, fig.align='center', fig.cap='Depth score distribution by marker', out.width='100%', fig.pos='H'}
+```{r slp01, echo = FALSE, message=FALSE, fig.align='center', fig.cap='Depth score distribution by marker', out.width='85%', fig.pos='H'}
 #
 #show the depth score plot
 #
@@ -414,14 +418,15 @@ Along the x-axis quantiles of the depth score are plotted at increments of `0.01
 
 Inspecting this plot, we see that marker `V1` has a uniformly high depth score, that `V2` has a low depth score for most quantiles and then a jump to high depth score for the higher quanitles, and marker `V3` mainly has low depth score across all quantiles.
 
-The solidly-colored line of `V1` indicates that `faust` has selected this marker for the phenotype discovery in the latter phase of the analysis. The dashed lines for markers `V2` and `V3` indcates `faust` has removed these markers from the phenotype discovery phase based on the default parameter settings. The two dashed red lines also appear on the plot: the vertical red line corresponds to the parameter `selectionQuantile` and the horizontal line to the parameter `depthScoreThreshold`. By default, these parameters are set to 0.50 and 0.01 respectively, and define the default marker selection policy of `faust`: all markers with empirical depth score above the `depthScoreThreshold` at the specified `selectionQuantile` will be included for phenotype discovery; those markers below the threshold, excluded.
+The solidly-colored line of `V1` indicates that `faust` has selected this marker for the phenotype discovery in the latter phase of the analysis. The dashed lines for markers `V2` and `V3` indcates `faust` has removed these markers from the phenotype discovery phase based on the default parameter settings.
+
+The two dashed red lines also appear on the plot: the vertical red line corresponds to the parameter `selectionQuantile` and the horizontal line to the parameter `depthScoreThreshold`. By default, these parameters are set to 0.50 and 0.01 respectively, and define the default marker selection policy of `faust`: all markers with empirical depth score above the `depthScoreThreshold` at the specified `selectionQuantile` will be included for phenotype discovery; those markers below the threshold, excluded.
 
 This distribution of scores can be connected to the underlying data. For `V1`, we expect that univariate multimodality should be visible across the experiment because the depth score is uniformly high. For `V2` we expect multimodality to be visible only in a subset of samples. And for `V3` we expect univarite plots to show no discernable multimodality.
 
 The following ridgelines confirm this expectation.
 
-```{r sr01, message=FALSE, eval=TRUE, echo=TRUE, out.width = 8, out.height = 8}
-#, results='asis'}
+```{r sr01, message=FALSE, eval=TRUE, echo=TRUE, fig.width = 8, fig.asp = 0.618, out.width = "70%", fig.align = "center"}
 #
 #link the scoreLines plot to the sample-level data
 #
@@ -455,7 +460,7 @@ p1
 
 This presents the first tuning opportunity for `faust`: we see that for 5 of the simulated samples, marker `V2` has clear evidence of multimodality. Should it be included in the analysis?
 
-The decision to tune `faust` to include markers based on the depth score is informed by the experimental design. Imagine, for example, that these simulated samples came from a an experiment with five subjects and three stimulation conditions: control, stim1, and stim2. It is possible that multimodality (corresponding to expression of the marker) is expected only in a subset of samples based on such a design. It may then be desirable to tune `faust` to include marker `V2` in such a case: while we do not know if the curve observed for marker `V2` corresponds to a specific stimulation condition, this trend line (arising from the data) may be consistent with our prior beliefs about the experimental context.
+The decision to tune `faust` to include markers based on the depth score is informed by the experimental design. Imagine, for example, that these simulated samples came from a an experiment with samples collected from five subjects and subjected to three stimulation conditions: control, stim1, and stim2. It is possible that multimodality (corresponding to expression of the marker) is expected only in a subset of samples based on such a design. It may then be desirable to tune `faust` to include marker `V2` in such a case: while we do not know if the curve observed for marker `V2` corresponds to a specific stimulation condition, this depth score line (arising from the data) may be consistent with our prior beliefs about the experimental context.
 
 We show how to perform this tuning in the following code chunk. In addition to the original parameter settings we now set:
 - `depthScoreThreshold` to a value above its default of 0.01.
@@ -478,7 +483,8 @@ generateAnnotationThresholds(
     projectPath         = projPath02,
     depthScoreThreshold = 0.25,
     selectionQuantile   = 0.825,
-    plottingDevice      = "png"
+    plottingDevice      = "png",
+    threadNum           = 4
 )
 ```
 ```{r at02a, message = FALSE, echo=FALSE, eval = TRUE, results='hide'}
@@ -496,7 +502,8 @@ invisible(generateAnnotationThresholds(
     projectPath         = projPath02,
     depthScoreThreshold = 0.25,
     selectionQuantile   = 0.825,
-    plottingDevice      = "png"
+    plottingDevice      = "png",
+    threadNum           = 4
 ))
 ```
 
@@ -509,9 +516,16 @@ Note we unlink the `faustData` directory prior to re-running. We recommend doing
 knitr::include_graphics(file.path(projPath02,"faustData","plotData","scoreLines.png"))
 ```
 
-If possible, we recommend discussing the experimental design with the scientist(s) that generated the dataset (if different from the person reading this vignette) prior to applying `faust` to the dataset, in order to understand what design parameters might influence the `faust` analysis. In addition to stimulation conditions, other information that may be useful to describe to `faust` is information about time points in longitudinal studies, if specific markers in the panel are included because they are required to answer a question of scientific interest, if there are known batch effects, and if prior biological knowledge leads to expected characteristics about the dataset. 
+If possible, we recommend discussing the experimental design with the scientist(s) that generated the dataset (if different from the person reading this vignette) prior to applying `faust` to the dataset, in order to understand what design parameters might influence the `faust` analysis.
 
-One final comment: we do not recommend including external metadata that will be used in follow-on modeling in the `faust` analysis. For example, if a cytometry experiment is designed to discover phenotypes that differentiating subjects that respond to therapy from those that do not, the responder status of individual subjects should be held-out from `faust` to prevent biasing the follow-on analysis. This same comment potentially applies to any external metadata (including meta data describing stimulation condtions, etc), and so tuning requires consideration on an experiment-by-experiment basis.
+In addition to stimulation conditions, other information that may be useful to describe to `faust`:
+
+- information about time points in longitudinal studies
+- if specific markers in the panel are included because they are required to answer a question of scientific interest
+- if there are known batch effects
+- if prior biological knowledge leads to expected characteristics about the markers in the dataset
+
+One final comment: we do not recommend including external metadata that will be used in follow-on modeling in the `faust` analysis. For example, if a cytometry experiment is designed to discover phenotypes that differentiate subjects that respond to therapy from those that do not, the responder status of individual subjects should be held-out from `faust` to prevent biasing the follow-on analysis. This same comment potentially applies to any external metadata (including meta data describing stimulation condtions, etc), and so tuning requires careful thought on an experiment-by-experiment basis.
 
 # Annotation thresholds - tuning the experimental unit
 
@@ -530,7 +544,7 @@ Examining the pData, we see that the mapping from sample to subject is now store
 
 ```{r at03, echo=TRUE, eval = FALSE}
 #
-#re-run tuning the depth score selection criteria
+#re-run tuning the experimental unit
 #
 projPath03 <- file.path(tempdir(),"FAUST_R3")
 if (dir.exists(projPath03)) {
@@ -544,12 +558,13 @@ generateAnnotationThresholds(
     depthScoreThreshold = 0.25,
     selectionQuantile   = 0.825,
     plottingDevice      = "png",
-    experimentalUnit    = "subject"
+    experimentalUnit    = "subject",
+    threadNum           = 4
 )
 ```
 ```{r at03a, message = FALSE, echo=FALSE, eval = TRUE, results='hide'}
 #
-#re-run tuning the depth score selection criteria
+#re-run tuning the experimental unit
 #
 projPath03 <- file.path(tempdir(),"FAUST_R3")
 if (dir.exists(projPath03)) {
@@ -563,7 +578,8 @@ invisible(generateAnnotationThresholds(
     depthScoreThreshold = 0.25,
     selectionQuantile   = 0.825,
     plottingDevice      = "png",
-    experimentalUnit    = "subject"
+    experimentalUnit    = "subject",
+    threadNum           = 4
 ))
 ```
 
@@ -577,3 +593,245 @@ knitr::include_graphics(file.path(projPath03,"faustData","plotData","scoreLines.
 ```
 
 When we look at the depth score plot, we now see that markers `V1` and `V2` have consistent depth score across the experiment. This is because by concatenating expression data by subject, marker V2 now consistently appears to have multimodality across the expeirment. This can be confirmed by viewing the expression data for the experimental unit.
+
+```{r sr02, message=FALSE, eval=TRUE, echo=TRUE, fig.width = 8, fig.asp = 0.618, out.width = "85%", fig.align = "center"}
+#
+#link the scoreLines plot to the experimental unit data
+#
+all_eus <- list.files(file.path(projPath03,"faustData","expUnitData"))
+firstEu <- TRUE
+for (eu in all_eus) {
+    eu_data <- as.data.frame(readRDS(file.path(projPath03,"faustData","expUnitData",eu,"expUnitExprs.rds")))
+    eu_data$`eu_id` <- eu
+    if (firstEu) {
+        all_eu_data <- eu_data
+        firstEu <- FALSE
+    }
+    else {
+        all_eu_data <- rbind(all_eu_data,eu_data)
+    }
+}
+depth_score_demo_df <- gather(all_eu_data,key="Marker",value="Expression",-eu_id)
+p2 <- ggplot(depth_score_demo_df, aes(x = Expression, y = eu_id,fill=Marker))+
+    facet_wrap(~Marker,ncol=2)+
+    geom_density_ridges(rel_min_height=0.01)+
+    theme_ridges(center_axis_label=TRUE)+
+    ylab("Simulated experimental unit")+
+    xlab("Simulated expression")+
+    theme(axis.text.x=element_blank(),
+          axis.ticks.x=element_blank(),
+          axis.text.y=element_blank(),
+          axis.ticks.y=element_blank(),
+          legend.position="bottom")
+p2
+```
+
+# Annotation thresholds - tuning the active channels
+
+For higher dimensional panels, there may be markers you want to exclude from the analysis. This can occur for a variety of reasons, such as technical effects. This is done simply by passing in a string vector to `faust` listing the markers you wish to use. We illustrate this in the following example, where we exclude marker `V3` from the analysis.
+
+```{r at04, echo=TRUE, eval = FALSE}
+#
+#re-run tuning the active channels
+#
+projPath04 <- file.path(tempdir(),"FAUST_R4")
+if (dir.exists(projPath04)) {
+   unlink(projPath04, recursive=TRUE)
+}
+dir.create(projPath04, recursive = TRUE)
+generateAnnotationThresholds(
+    gatingSet           = gs,
+    startingCellPop     = "root",
+    projectPath         = projPath04,
+    depthScoreThreshold = 0.25,
+    selectionQuantile   = 0.825,
+    plottingDevice      = "png",
+    experimentalUnit    = "subject",
+    threadNum           = 4,
+    activeChannels      = c("V1","V2")
+)
+```
+```{r at04a, message = FALSE, echo=FALSE, eval = TRUE, results='hide'}
+#
+#re-run tuning the active channels
+#
+projPath04 <- file.path(tempdir(),"FAUST_R4")
+if (dir.exists(projPath04)) {
+   unlink(projPath04, recursive=TRUE)
+}
+dir.create(projPath04, recursive = TRUE)
+invisible(generateAnnotationThresholds(
+    gatingSet           = gs,
+    startingCellPop     = "root",
+    projectPath         = projPath04,
+    depthScoreThreshold = 0.25,
+    selectionQuantile   = 0.825,
+    plottingDevice      = "png",
+    experimentalUnit    = "subject",
+    threadNum           = 4,
+    activeChannels      = c("V1","V2")
+))
+```
+
+If we look at the depth score plot again, we will only see scores for markers `V1` and `V2`.
+
+```{r slp04, echo = FALSE, message=FALSE, fig.align='center', fig.cap='Depth score distribution by marker', out.width='100%', fig.pos='H'}
+#
+#show the depth score plot
+#
+knitr::include_graphics(file.path(projPath04,"faustData","plotData","scoreLines.png"))
+```
+
+In addition to the depth score plot, the `plotData` directory also contains plots that show the distribution of annotation thresholds placed against an aggregate expression distribution.
+
+These plots can be useful to assess if the marker boundaries needs to be tuned. We next show the plot for `V1`.
+
+```{r slp05, echo = FALSE, message=FALSE, fig.align='center', fig.cap='Depth score distribution by marker', out.width='100%', fig.pos='H'}
+knitr::include_graphics(file.path(projPath04,"faustData","plotData","hist_V1_ab_1.png"))
+```
+
+From this plot, the red dashed lines are the annotation thresholds determined for each experimental unit. The histogram is drawn by aggregating 500 observations (randomly selected) from each expeirmental unit and then concatenating across the experiment. The purpose of this type of plot is to show the relative locations of annotation thresholds from one experimental unit to the next. These plots can be useful in checking for batch effects or for other technical effects that may affect a subset of samples in large experiments.
+
+# Annotation thresholds - tuning the channel bounds
+
+A final tuning object is the parameter `channelBounds`, which determines the admissible set of observations considers when `faust` computes density estimates. Inspecting the aggregate density histograms can lead to tuning this parameter. Another reason for tuning this parameter arises in flow cytometry experiments: if you know the transformation that has been applied to the markers, you may want to set the lower admissible bound to the image of `0` under this transformation. Still another reason to tune this parameter is if you wish to intergrate information from FMO controls. We show how to manually set this parameter in the following code block. Note that the column names of the matrix are required to match the active channels parameter setting.
+
+```{r at05, echo=TRUE, eval = FALSE}
+#
+#re-run manually setting the channel bound
+#here we set the upper bound to Inf and the lower bound to 0
+#this admits all non-negative measurements for density calculations.
+#settings can vary depending on experimental context.
+#
+cbManual <- matrix(0,nrow=2,ncol=2)
+colnames(cbManual) <- c("V1","V2")
+rownames(cbManual) <- c("Low","High")
+cbManual["High",] <- Inf
+projPath05 <- file.path(tempdir(),"FAUST_R5")
+if (dir.exists(projPath05)) {
+   unlink(projPath05, recursive=TRUE)
+}
+dir.create(projPath05, recursive = TRUE)
+generateAnnotationThresholds(
+    gatingSet           = gs,
+    startingCellPop     = "root",
+    projectPath         = projPath05,
+    depthScoreThreshold = 0.25,
+    selectionQuantile   = 0.825,
+    plottingDevice      = "png",
+    experimentalUnit    = "subject",
+    threadNum           = 4,
+    activeChannels      = c("V1","V2"),
+    channelBounds       = cbManual
+)
+```
+```{r at05a, message = FALSE, echo=FALSE, eval = TRUE, results='hide'}
+cbManual <- matrix(0,nrow=2,ncol=2)
+colnames(cbManual) <- c("V1","V2")
+rownames(cbManual) <- c("Low","High")
+cbManual["High",] <- Inf
+projPath05 <- file.path(tempdir(),"FAUST_R5")
+if (dir.exists(projPath05)) {
+   unlink(projPath05, recursive=TRUE)
+}
+dir.create(projPath05, recursive = TRUE)
+invisible(generateAnnotationThresholds(
+    gatingSet           = gs,
+    startingCellPop     = "root",
+    projectPath         = projPath05,
+    depthScoreThreshold = 0.25,
+    selectionQuantile   = 0.825,
+    plottingDevice      = "png",
+    experimentalUnit    = "subject",
+    threadNum           = 4,
+    activeChannels      = c("V1","V2"),
+    channelBounds       = cbManual
+))
+```
+
+In this example, we see the tuning does not noticeably affect the distribution of annotation thresholds, as seen by the following plot.
+
+```{r slp06, echo = FALSE, message=FALSE, fig.align='center', fig.cap='Depth score distribution by marker', out.width='100%', fig.pos='H'}
+knitr::include_graphics(file.path(projPath05,"faustData","plotData","hist_V1_ab_1.png"))
+```
+
+## Discovering phenotypes
+
+Once the annotation thresholds have been generated, and tuning is complete, you can discover phenotypes across the experiment using the `discoverPhenotypes` function.
+
+```{r discover_phenotypes, eval = TRUE, echo = TRUE}
+discoverPhenotypes(
+    gatingSet   = gs,
+    projectPath = projPath05,
+    threadNum   = 4
+)
+count_df <- as.data.frame(readRDS(file.path(projPath05,"faustData","faustCountMatrix.rds")))
+head(count_df)
+```
+
+Once complete, the `faustCountMatrix.rds` is available for downstream analysis in the `faustData` directory.
+
+## The faust function
+
+We conclude by noting that all parameters discussed in this vignette can be set by invoking the `faust` function directly. This function is simply a wrapper around `generateAnnotationThresholds` and `discoverPhenotypes`, and will pass parameters to the appropriate function as done in this vignette.
+
+The only difference is that `faust` has a parameter called `annotationsApproved` that must be set to `TRUE` before `discoverPhenotypes` is called. This variable is the way you signal to `faust` that tuning is complete. We complete this vignette by showing this.
+
+```{r at06, echo=TRUE, eval = FALSE}
+#
+#run the tuned analysis via the faust function
+#
+cbManual <- matrix(0,nrow=2,ncol=2)
+colnames(cbManual) <- c("V1","V2")
+rownames(cbManual) <- c("Low","High")
+cbManual["High",] <- Inf
+projPath06 <- file.path(tempdir(),"FAUST_R6")
+if (dir.exists(projPath06)) {
+   unlink(projPath06, recursive=TRUE)
+}
+dir.create(projPath06, recursive = TRUE)
+faust(
+    gatingSet           = gs,
+    startingCellPop     = "root",
+    projectPath         = projPath06,
+    depthScoreThreshold = 0.25,
+    selectionQuantile   = 0.825,
+    plottingDevice      = "png",
+    experimentalUnit    = "subject",
+    threadNum           = 4,
+    activeChannels      = c("V1","V2"),
+    channelBounds       = cbManual,
+    annotationsApproved = TRUE
+)
+```
+```{r at06a, message = FALSE, echo=FALSE, eval = TRUE, results='hide'}
+cbManual <- matrix(0,nrow=2,ncol=2)
+colnames(cbManual) <- c("V1","V2")
+rownames(cbManual) <- c("Low","High")
+cbManual["High",] <- Inf
+projPath06 <- file.path(tempdir(),"FAUST_R6")
+if (dir.exists(projPath06)) {
+   unlink(projPath06, recursive=TRUE)
+}
+dir.create(projPath06, recursive = TRUE)
+invisible(faust(
+    gatingSet           = gs,
+    startingCellPop     = "root",
+    projectPath         = projPath06,
+    depthScoreThreshold = 0.25,
+    selectionQuantile   = 0.825,
+    plottingDevice      = "png",
+    experimentalUnit    = "subject",
+    threadNum           = 4,
+    activeChannels      = c("V1","V2"),
+    channelBounds       = cbManual,
+    annotationsApproved = TRUE
+))
+```
+
+We see the `faustCountMatrix.rds` is available for downstream analysis.
+
+```{r conclusion, eval = TRUE, echo = TRUE}
+count_df <- as.data.frame(readRDS(file.path(projPath06,"faustData","faustCountMatrix.rds")))
+head(count_df)
+```
